@@ -1,4 +1,5 @@
 elvi.1sr.gz @mandir@/man1/W.1.gz
+elvi.1sr.gz @mandir@/man1/acronym.1sr.gz
 elvi.1sr.gz @mandir@/man1/alioth.1sr.gz
 elvi.1sr.gz @mandir@/man1/altavista.1sr.gz
 elvi.1sr.gz @mandir@/man1/amazon.1sr.gz
@@ -40,6 +41,7 @@ elvi.1sr.gz @mandir@/man1/freebsd.1sr.gz
 elvi.1sr.gz @mandir@/man1/freedb.1sr.gz
 elvi.1sr.gz @mandir@/man1/freshmeat.1sr.gz
 elvi.1sr.gz @mandir@/man1/fsfdir.1sr.gz
+elvi.1sr.gz @mandir@/man1/gcache.1sr.gz
 elvi.1sr.gz @mandir@/man1/genbugs.1sr.gz
 elvi.1sr.gz @mandir@/man1/genpkg.1sr.gz
 elvi.1sr.gz @mandir@/man1/genportage.1sr.gz
