@@ -1,0 +1,10 @@
+sr acronym -e NASA
+National Aeronautics and Space Administration \(USA\)
+sr acronym -u NASA
+National Association for the Advancement
+sr acronym surfraw
+What does SURFRAW stand for\?
+sr acronym -f
+Systematic Buzz Phrase Projector \(SBPP\) number
+sr acronym -a aaa
+Academia de Automovilismo Andrade \(Guatemala\)
