@@ -1,0 +1,4 @@
+sr gcache www.mozilla.org
+http://www.google.com/intl/[A-Za-z]+/help/features_list.html#cached
+sr gcache -i www.openoffice.org
+cache:www.openoffice.org&amp;hl=.*&strip=1
