@@ -1,3 +1,8 @@
+2009-11-10  Ian Beckwith  <ianb@erislabs.net>
+
+	* New elvi: acronym, gcache (google cache).
+	  Thanks to fittabile@lifegate.it
+
 2009-11-08  Ian Beckwith  <ianb@erislabs.net>
 
 	* New elvi: youtube. Thanks to Sumant Oemrawsingh.
